--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
   <head>
       <script>window.$ = window.jQuery = require('jquery');</script>
       <script src="./buttons.js"></script>
-		<link rel="stylesheet" type="text/css" href="main.css">
-        <link rel="stylesheet" href="photon.css">
-        <link rel="stylesheet" href="bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" href="css/photon.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
   </head>
     <header class="toolbar toolbar-header">
 		<div class="toolbar-actions">
