--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <script>window.$ = window.jQuery = require('jquery');</script>
-      <script src="./buttons.js"></script>
+      <script src="js/buttons.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="stylesheet" href="css/photon.css">
         <link rel="stylesheet" href="css/bootstrap.css">
